# doukutsu-save-editor-rs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci-build.yml  pages.yml  rust.yml  static.yml
assets/: manifest.json  sw.js
pages/: doukutsu-save-editor.js  doukutsu-save-editor_bg.wasm  index.html  manifest.json
src/: app.rs  lib.rs  main.rs
src/app/: basic.rs  inventory.rs  weapon.rs
src/app/storage/: mod.rs
src/app/storage/inner/: mod.rs
src/app/storage/native/: mod.rs
src/app/storage/web/: mod.rs
src/app/utils/: mod.rs
