[package]
name = "doukutsu-save-editor"
version = "0.1.13"
authors = ["poly000 <1348292515@qq.com>"]
edition = "2021"
rust-version = "1.65"
license = "MIT"

[dependencies]
egui = { version = "0.31.1" }
cavestory-save-lib = "2.9.2"
rfd = "0.15.3"
tap = "1.0.1"
winit = "0.30.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.44.0", features = ["rt", "time"] }
tracing-subscriber = "0.3.19"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
log = "0.4.27"
# coroutine executor for js promise
poll-promise = { version = "0.3.0", features = ["web"] }

[target.'cfg(unix)'.dependencies]
eframe = { version = "0.31.1", features = [
    "glow",    # Use the glow rendering backend. Alternative: "wgpu".
    "x11",
    "wayland",
], default-features = false }

[target.'cfg(not(unix))'.dependencies]
eframe = { version = "0.31.1", features = [
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
], default-features = false }

[features]
default = ["winit/default"]
# Embed the default egui fonts.
default_fonts = ["eframe/default_fonts"]
# Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
accesskit = ["eframe/accesskit"]

[profile.dev]
incremental = true

[profile.release]
lto = "thin"
panic = "abort"
strip = true
opt-level = "z"


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
